# llm-camp

./: .gitignore  pyproject.toml
llm_camp/: hybrid_search.ipynb  module_1.ipynb  module_2.ipynb
qdrant_storage/: raft_state.json
