[project]
name = "llm-camp"
version = "0.1.0"
description = ""
authors = [
    {name = "aybike alkan",email = "aybike.alkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "elasticsearch (==8.*)",
    "minsearch (>=0.0.4,<0.0.5)",
    "qdrant-client[fastembed] (>=1.14.2)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "7.1.2"
ipykernel = "^6.30.1"

